# spiralcode-reference

./: AUTHORS  LICENSE  README.md
libgraph/: spiral.cc  spiral.hh
programs/: CMakeLists.txt  dualdual.cc
